[project]
name = "production-level-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.26",
    "langchain-groq>=0.3.4",
    "langchain-tavily>=0.2.4",
    "langgraph>=0.4.10",
    "tavily-python>=0.7.8",
]
